--- a/src/app/components/page/page.scss
+++ b/src/app/components/page/page.scss
@@ -27,12 +27,6 @@
   gap: 8px;
 }
 
-.page-info {
-  padding: 8px 0;
-  background: #fff;
-  border-radius: 10px;
-}
-
 .page-descriptions {
   display: grid;
   padding: 8px;
