--- a/src/app/components/patient-details-card/patient-details-card.scss
+++ b/src/app/components/patient-details-card/patient-details-card.scss
@@ -64,8 +64,10 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
-    // flex: 1 1 auto;
+    flex: 1 1 auto;
+    max-height: 60px;
+    max-width: 300px;
+    gap: 20px;
 }
 
 .tags-header {
@@ -75,13 +77,14 @@
 }
 
 .tags {
-    align-self: center;
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 10px;
-    // flex: 1 1 auto;
-}   
+  display: flex;
+  gap: 10px;
+  width: 100%;
+}
 
 .tag {
-    flex: 1 1 auto;
+  flex: 1 1 auto;      
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
